feat(server): Implement server apis (#4)
* Refactoring packages and generating prisma docs

* complete server implementation

* Fixing some bugs with impl
